feat: refuse donation feature
- Added Refuse action button in manage-donations page
- Added logic to filter out refused donations from search methods (soft delete)
- Added manage-donations/refuse mapping
- Modified stream().toList() with .collect(Collectors.toList()) to remove immutability